updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer in training, and I currently work at a credit union.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Guyana, and moved to Minnesota when I was in kindergarten.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include trying new foods, playing ultimate frisbee, and traveling to new countries.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I do not have a specific "dream job", but I know that if I were to have a dream job that it would be one where I can work remotely, and also feel a sense of satisfaction after completing my work for that day. A satisfaction that I wholeheartedly contirbuted my best work to better society.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Minneapolis.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because it seems challenging. I am the type of person who seeks constant mental stimulation. Because there are so many languages to learn, I see this a means for me to provide myself that mental stimulation, while gaining a valuable skill.</p>
     </section>
 
     <footer id="footer">
